vlib/v/checker/tests/struct_not_init_err.out
vlib/v/util/diff.v:6:1: warning: @[deprecated_after] is only valid, in the presence of a `@[deprecated]` attribute
    4 | 
    5 | // find_working_diff_command returns the first available command from a list of known diff cli tools.
    6 | @[deprecated_after: '2024-06-30']
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 | @[deprecated]
    8 | pub fn find_working_diff_command() !string {
vlib/v/checker/tests/struct_not_init_err.vv:11:7: error: `Data` must be initialized
    9 | 
   10 | fn main() {
   11 |     _ := Data
      |          ~~~~
   12 |     _ := DataCollection
   13 |     _ := ast.Type
vlib/v/checker/tests/struct_not_init_err.vv:12:7: error: `DataCollection` must be initialized
   10 | fn main() {
   11 |     _ := Data
   12 |     _ := DataCollection
      |          ~~~~~~~~~~~~~~
   13 |     _ := ast.Type
   14 |     // _ := gui.Animate // for vpm mod
vlib/v/checker/tests/struct_not_init_err.vv:13:11: error: `v.ast.Type` must be initialized
   11 |     _ := Data
   12 |     _ := DataCollection
   13 |     _ := ast.Type
      |              ~~~~
   14 |     // _ := gui.Animate // for vpm mod
   15 | }
